syntax = "proto3";

package manager.api.dept;

option go_package = ".;dept";
option java_multiple_files = true;
option java_package = "manager.api.dept";

import "api/dept/proto/dept.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service Dept{
  // ListDeptClassify 获取部门分类列表
  rpc ListDeptClassify (ListDeptClassifyRequest) returns (ListDeptClassifyReply) {
    option (google.api.http) = {
      get: "/manager/api/v1/dept/classifies",
    };
  }

  // CreateDeptClassify 创建部门分类
  rpc CreateDeptClassify (CreateDeptClassifyRequest) returns (CreateDeptClassifyReply) {
    option (google.api.http) = {
      post: "/manager/api/v1/dept/classify",
      body: "*"
    };
  }

  // UpdateDeptClassify 更新部门分类
  rpc UpdateDeptClassify (UpdateDeptClassifyRequest) returns (UpdateDeptClassifyReply) {
    option (google.api.http) = {
      put: "/manager/api/v1/dept/classify",
      body: "*"
    };
  }

  // DeleteDeptClassify 删除部门分类
  rpc DeleteDeptClassify (DeleteDeptClassifyRequest) returns (DeleteDeptClassifyReply) {
    option (google.api.http) = {
      delete: "/manager/api/v1/dept/classify",
    };
  }

  // ListCurrentDept 获取当前的部门信息列表
  rpc ListCurrentDept (ListDeptRequest) returns (ListDeptReply) {
    option (google.api.http) = {
      get: "/manager/api/v1/current/depts",
    };
  }
  
  // ListDept 获取部门信息列表
  rpc ListDept (ListDeptRequest) returns (ListDeptReply) {
    option (google.api.http) = {
      get: "/manager/api/v1/depts",
    };
  }

  // CreateDept 创建部门信息
  rpc CreateDept (CreateDeptRequest) returns (CreateDeptReply) {
    option (google.api.http) = {
      post: "/manager/api/v1/dept",
      body: "*"
    };
  }

  // UpdateDept 更新部门信息
  rpc UpdateDept (UpdateDeptRequest) returns (UpdateDeptReply) {
    option (google.api.http) = {
      put: "/manager/api/v1/dept",
      body: "*"
    };
  }

  // DeleteDept 删除部门信息
  rpc DeleteDept (DeleteDeptRequest) returns (DeleteDeptReply) {
    option (google.api.http) = {
      delete: "/manager/api/v1/dept",
    };
  }

  // GetDept 获取指定的部门信息
  rpc GetDept (GetDeptRequest) returns (GetDeptReply) {
    option (google.api.http) = {
      get: "/manager/api/v1/dept",
    };
  }

}